BSP-194: UpdateItemInstance handler --- - UpdateItemInstance handler  + DI - OpenAPI doc updated. - KnexItemInstanceRepository updated for UpdateItemInstance function.
